WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124075
REGRESSION (
r155660
): Some Etherpad pages not scrollable with overlay scrollbars
https://bugs.webkit.org/show_bug.cgi?id=124075
Summary
REGRESSION (r155660): Some Etherpad pages not scrollable with overlay scrollbars
Simon Fraser (smfr)
Reported
2013-11-08 15:13:01 PST
REGRESSION (
r155660
): Some Etherpad pages not scrollable with overlay scrollbars
Attachments
Patch
(3.01 KB, patch)
2013-11-08 15:16 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-11-08 15:16:03 PST
Created
attachment 216450
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-11-08 15:16:27 PST
<
rdar://problem/15417068
>
Simon Fraser (smfr)
Comment 3
2013-11-08 15:31:09 PST
Comment on
attachment 216450
[details]
Patch This is wrong. We don't need to avoid the double toggle if scrollbars are overlay.
Simon Fraser (smfr)
Comment 4
2013-11-08 15:43:52 PST
Comment on
attachment 216450
[details]
Patch On second thoughts, let's stick with this. We don't really know that the scrollbars are overlay until we try to make one.
WebKit Commit Bot
Comment 5
2013-11-08 15:51:56 PST
Comment on
attachment 216450
[details]
Patch Clearing flags on attachment: 216450 Committed
r158968
: <
http://trac.webkit.org/changeset/158968
>
WebKit Commit Bot
Comment 6
2013-11-08 15:51:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug